# audiopyle

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
docs/: setup.md
notebooks/: playground.ipynb
scripts/: setup-macos.sh  setup-ubuntu.sh  setup-windows.ps1
src/audiopyle/: __init__.py  audio.py  bandcamp.py  builtins.py  cli.py  config.py  core.py  discogs.py  exceptions.py  extract.py  management.py  organize.py  paths.py  rekordbox.py  timestamps.py
tests/integration/: test_organize_end_to_end.py
tests/unit/: test_builtins.py  test_config.py  test_core.py  test_exceptions.py  test_extract.py  test_management.py  test_organize.py  test_paths.py  test_timestamps.py
