[project]
name = "audiopyle"
version = "0.2.0"
description = "Local music management: turn a staging folder into a date-bucketed library."
readme = "README.md"
authors = [
    { name = "Mona", email = "7269040+CoolCatMona@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydub>=0.25.1",
    "beautifulsoup4>=4.12.2",
    "requests>=2.32",
    "typer>=0.12",
    "platformdirs>=4.2",
    "librosa>=0.10.1",
    "numpy>=1.26.2",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
audiopyle = "audiopyle.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.28",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audiopyle"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "D",      # pydocstyle
]
ignore = [
    "D100",   # missing docstring in module (allow for tests)
    "D104",   # missing docstring in package
    "D107",   # missing docstring in __init__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that touch the filesystem and CLI",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/audiopyle"]

[[tool.mypy.overrides]]
module = ["pydub.*", "librosa.*", "bs4.*", "win32con", "win32file", "pywintypes"]
ignore_missing_imports = true
